--- a/Vistas/Crear_Estado_Situacion_Financiera.form
+++ b/Vistas/Crear_Estado_Situacion_Financiera.form
@@ -14,6 +14,7 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="Crear Estado de Situaci&#xf3;n Financiera"/>
+    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -150,7 +151,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Rockwell" size="12" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Presione el boton para crear un nuevo Estado de Situacion Financiera"/>
+                <Property name="text" type="java.lang.String" value="Presione el bot&#xf3;n para crear un nuevo Estado de Situacion Financiera"/>
               </Properties>
             </Component>
           </SubComponents>
